Modules support (#938)
* Added fixes for modules

* Removed open from module-info

* Removed test-jar dep

* Added module-info in bundle

* Fixed checkstyle problems by upgrading checkstyle,
deprecated not used flags and dealing with unsupported module-info.

* Removed bundle

* Removed forgotten file due to merges

* Added newline at end of file

* Upgraded all plugin versions

* Added source and javadoc plugin

* Changed to jar-no-fork

* Moved version numbers in pom

* Updated release process